Added alpha deployment thing, also added various descriptions and email functionality. its late and i'm tired and my change history isn't great.

--- a/Bandtastic/Content/Site.css
+++ b/Bandtastic/Content/Site.css
@@ -1,24 +1,44 @@
-﻿body {
+﻿/*body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
+
 .dl-horizontal dt {
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
+
 input,
 select,
 textarea {
     max-width: 280px;
-}
+}*/
+
+
+/*sticky footers >> http://materializecss.com/footer.html*/
+  body {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
+  }
+
+  main {
+      flex: 1 0 auto;
+  }
+
+
+/*https://stackoverflow.com/questions/2913236/html-text-input-field-with-currency-symbol*/
+
+  .currencyinput {
+      border: 1px inset #ccc;
+  }
+  .currencyinput input {
+      border: 0;
+  }
